how-tos/Agic-Lab/deployment/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
          - name: nginx-config
          mountPath: /etc/nginx
          - name: tls-certs
          mountPath: /etc/tls-certs
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
      - name: tls-certs
        configMap:
          name: tls-certs
